// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel Rendering Render SidePanel component when expanded and show its content 1`] = `
<React.Fragment>
  <React.Portal
    container="body"
  >
    <div
      aria-expanded={true}
      aria-labelledby="sidePanelTitle"
      className="SidePanel"
      id="SidePanel"
      style={
        Object {
          "height": "calc(100% - 0px)",
          "top": "0px",
          "width": "50%",
          "zIndex": "1",
        }
      }
    >
      <div
        className="SidePanel__header"
      >
        <p
          className="SidePanel__title"
          id="sidePanelTitle"
        >
          Test title
        </p>
        <IconButton
          className="SidePanel__close"
          icon={[Function]}
          id="closeSidePanelBtn"
          onClick={[Function]}
          size="medium"
          tooltipPlacement="right"
          type="ghost"
        />
      </div>
      <div
        className="SidePanel__content"
      >
        <h1
          id="content"
        >
          Test child
        </h1>
      </div>
    </div>
  </React.Portal>
</React.Fragment>
`;

exports[`SidePanel Rendering Render SidePanel component when not expanded 1`] = `
<React.Fragment>
  <React.Portal
    container="body"
  >
    <div
      aria-expanded={false}
      aria-labelledby="sidePanelTitle"
      className="SidePanel"
      id="SidePanel"
      style={
        Object {
          "height": "calc(100% - 0px)",
          "top": "0px",
          "width": "50%",
          "zIndex": "1",
        }
      }
    >
      <div
        className="SidePanel__header"
      >
        <p
          className="SidePanel__title"
          id="sidePanelTitle"
        >
          Test title
        </p>
        <IconButton
          className="SidePanel__close"
          icon={[Function]}
          id="closeSidePanelBtn"
          onClick={[Function]}
          size="medium"
          tooltipPlacement="right"
          type="ghost"
        />
      </div>
      <div
        className="SidePanel__content"
      >
        <h1>
          Test child
        </h1>
      </div>
    </div>
  </React.Portal>
</React.Fragment>
`;
